--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,6 @@ dependencies:
   percent_indicator: ^2.1.1+1
   font_awesome_flutter: ^8.2.0
   brasil_fields:
-  introduction_screen: ^1.0.9
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.8.0
 
 
 # For information on the generic Dart part of this file, see the
