--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.13.0+1
   firebase_core: ^0.4.2+1
@@ -34,6 +35,7 @@ dependencies:
   percent_indicator: ^2.1.1+1
   font_awesome_flutter: ^8.2.0
   brasil_fields:
+  url_launcher: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
